# GECL-ota-manager

./: AmazonRootCA1_pem.c  CMakeLists.txt  Kconfig  README.md  gecl-ota-manager.c  idf_component.yml
.github/workflows/: submodule-update.yml
include/: gecl-ota-manager.h
